kubernetes/projects/examples/networkpolicies/networkpolicy-denyall.yml
# Example of a NetworkPolicy specification.
# This network policy will be applied to an specific Pod (via podSelector) for all Ingress and Egress.
# The Pod is selected via the label "app=nginx".
# Since there is no "to" or "from" selector, this policy will block all Ingress/Egress traffic.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: my-networkpolicy
    namespace: np-test
spec:
    podSelector:
        matchLabels:
            app: nginx
    policyTypes:
    - Ingress
    - Egress
